--- a/public/index.html
+++ b/public/index.html
@@ -32,7 +32,7 @@
   </html>
   
 
-    <title>React App</title>
+    <title>tour.ist</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
